[package]
name = "zoya_profile"
version = "0.1.0"
description = "Zoya ride-sharing profile program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zoya_profile"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
