[package]
name = "zoya_ride"
version = "0.1.0"
description = "Zoya ride-sharing ride lifecycle program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zoya_ride"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "zoya_profile/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
zoya_profile = { path = "../zoya_profile", features = ["cpi"] }
